Created new Faaclient.java that handles request and returns all notams not just the first page. Also included unit test for the new class.
addressed all of pr comments